assets/main.scss
---
---
$color50: #e3f2fd;
$colorLight: #ffd95b;
$colorPrimary: #ffa726;
$colorDark: #c77800;
$colorGrey: #ccc;

*, *:before, *:after {
  box-sizing: border-box;
}
html, body {
  font: 400 16px Roboto, Arial, sans-serif;
  margin: 0;
  padding: 0;
  height: 100%;
}
body {
  display: flex;
  flex-direction: column;
  background-color: #fafafa;
}
header, .page-header, .pager, footer {
  flex: none;
}
header {
  background-color: $colorPrimary;
  padding: 18px 0;
}
.clearfix:before, .clearfix:after {
  content: '';
  clear: both;
  display: table;
}
a {
  color: #ff6f00;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
.page-header {
  padding: 30px 0;
  //background-color: $color50;
}
.page-header h1 {
  margin: 22px 0;
}
.page-header a {
  color: $colorPrimary;
}
.sidebar {
  background: $colorLight;
  width: 250px;
  position: fixed;
  transform: translateX(-250px);
  transition: all 0.15s ease;
  z-index: 2;
  height: 100vh;
  -webkit-overflow-scrolling: touch;
}
.sidebar--is-visible {
  transform: translateX(0);
}
.sidebar__logo {
  border-bottom: 1px solid $colorDark;
  font-size: 36px;
  font-weight: 300;
  height: 130px;
  line-height: 130px;
  margin-bottom: 0;
  text-align: center;
}
.sidebar__nav {
  max-height: 100%;
  overflow-y: auto;
}
.sidebar__nav-interior {
  height: 100%;
  padding: 40px 40px 170px;
}
.sidebar a {
  color: #000;
}
.section__header {
  font-size: 1em;
  text-decoration: none;
  margin-top: 0;
  margin-bottom: 10px;
}
.sidebar li {
  list-style: none;
}
.menu-button, .github-button {
  display: inline-block;
  font-size: 15.75px;
  background: none;
  border: none;
  margin: 20px 0 20px -10px;
  padding: 10px;
  color: #5E5E5E;
}
.github-button {
  float: right;
}
.content__area {
  width: 100%;
  padding-bottom: 40px;
}
.content {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 40px;
}
.content__overlay {
  background: rgba(0,0,0,0.4);
  width: 100%;
  height: 100vh;
  position: fixed;
  z-index: 1;
  display: none;
}
.content__overlay--is-active {
  display: block;
}
@media (min-width: 768px) {
  .sidebar {
    transform: translateX(0);
  }
  .content__area {
    padding: 40px 40px 40px 290px;
  }
  .menu-button {
    display: none;
  }
}
main {
  flex: 1 0 auto;
}
article {
  margin-bottom: 80px;
  line-height: 1.25;
}
h1, h2, h3, h4 {
  line-height: 1;
  font-weight: 400;
  margin: 40px 0 20px;
}
h1 {
  font-size: 32px;
}
h2 {
  font-size: 24px;
}
h3 {
  font-size: 20px;
}
h4 {
  font-size: 16px;
}
.meta {
  font-size: 14px;
  margin-bottom: 20px;
}
time {
  background: no-repeat url("data:image/svg+xml,%3Csvg width='14' height='16' viewBox='0 0 14 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13 2h-1v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H6v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H2c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h11c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm0 12H2V5h11v9zM5 3H4V1h1v2zm6 0h-1V1h1v2zM6 7H5V6h1v1zm2 0H7V6h1v1zm2 0H9V6h1v1zm2 0h-1V6h1v1zM4 9H3V8h1v1zm2 0H5V8h1v1zm2 0H7V8h1v1zm2 0H9V8h1v1zm2 0h-1V8h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1zm2 0h-1v-1h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1z'%3E%3C/path%3E%3C/svg%3E");
  padding-left: 20px;
}
.author {
  background: no-repeat url("data:image/svg+xml,%3Csvg width='17' height='17' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z'/%3E%3C/svg%3E");
  padding-left: 20px;
}
p, ul, ol, table, pre, dl {
  margin: 0 0 20px;
}
ul ul, ol ol, ul ol, ol ul {
  margin: 0;
}
ul, ol {
  padding-left: 24px;
}
li {
  line-height: 1.5;
}
details {
  border: 1px solid #aaa;

  p, ul, ol {
    margin: 15px;
  }
}
summary {
  cursor: pointer;
  background: $colorGrey;
  padding: 15px;
}
.footnotes {
  border-top: 1px dotted;
  margin-top: 40px;
  padding-top: 20px;
}
#markdown-toc, #timeline {
  list-style: none;
  padding-left: 8px;
}
#markdown-toc {
  border-left: 4px solid $colorLight;
}
#markdown-toc li {
  list-style: none;
}
img {
  max-width: 100%;
}
pre {
  padding: 16px;
  border-radius: 3px;
  border: 1px solid #e5e5e5;
  white-space: pre-wrap;
  word-wrap: break-word;
}
code {
  padding: 2px;
}
code, pre {
  font: 14px Consolas, "Liberation Mono", Menlo, Courier, monospace;
  line-height: 1.45;
  background-color: #eee;
}
blockquote {
  border-left: 3px solid #1de9b6;
  margin: 24px 0;
  padding: 0 0 0 20px;
  font-style: italic;
}
table {
  width: 100%;
  border-collapse: collapse;
}
th, td {
  text-align: left;
  padding: 5px 10px;
  border-bottom: 1px solid #e5e5e5;
}
.sticky-header th {
  background-color: $colorPrimary;
  position: sticky;
  top: 0;
}
hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0
}
footer {
  color: #fff;
  font-size: 12px;
  background-color: $colorDark;
  padding-top: 30px !important;
  padding-bottom: 15px !important;
}
footer a {
  color: #fff;
  text-decoration: underline;
}
@media (max-width: 820px) {
  header {
    text-align: center;
  }
  .site-title, .site-nav {
    float: none;
  }
  .site-nav {
    margin-top: 20px;
  }
}
::selection {
  background-color: #b3d4fc;
  text-shadow: none;
}
figure {
  margin: 0;
  margin-bottom: 30px;
}
figcaption {
  font-size: 13px;
  background-color: #fff9c4;
  padding: 16px 20px 20px;
}
.takeaway {
  color: #fff;
  background-color: #78909c;
  padding: 10px 30px 30px;
  margin-bottom: 30px;
}
// Hero page
.heroBox {
  display: inline-block;
  border: #aaa 1px solid;
  padding: 18px;
  background-color: #f9f9f9;
  max-width: 640px;
}
.heroBox .tabs span {
  padding: 0 10px;
}
@media (min-width: 1064px) {
  .hero-gallery img {
      padding: 0 159px;
  }
}
.heroinfobox {
  padding: 2px;
  margin-bottom: 10px;
}
.heroinfobox .header {
  padding: 5px;
}
.heroinfobox table {
  margin: 0;
}
$elementColor: #f07d75, #4e8ddf, #5fcb58, #ffb251, #9c76db;
@for $i from 1 to 6 {
  .element#{$i} {
    $color: nth($elementColor, $i);
    th, .header {
      background: $color;
    }
    .heroinfobox {
      border: 1px solid $color;
    }
    summary {
      background-color: $color;
    }
    details {
      border: 1px solid $color;
    }
  }
}
.elementNone {
  th, .header {
    background: $colorGrey;
  }
  .heroinfobox {
    border: 2px solid $colorGrey;
  }
  summary {
    background-color: $colorGrey;
  }
  details {
    border: 2px solid $colorGrey;
  }
}
// Chara list page
.card-list {
  padding: 10px;
}
.card-list li {
  display: block;
  list-style: none;
  float: left;
  border: 1px solid black;
  width: 140px;
}
.card-list a {
  display: block;
  padding: 5px;
  text-align: center;
}
.hero-icon, .sidekick-icon {
  width: 128px;
  height: 128px;
  margin: calc((140px - 128px)/2);
}
.hero-icon {
  position: relative;
}
.hero-icon .border {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-repeat: no-repeat;
  background-size: calc(128/125*100%);
}
.hero-chara-icon {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  margin: auto;
  border-radius: 8px;
}
.hero-3 {
  background-image: url(/assets/img/icon/ui_frame_h_01.png);
}
.hero-4 {
  background-image: url(/assets/img/icon/ui_frame_h_02.png);
}
.hero-5 {
  background-image: url(/assets/img/icon/ui_frame_h_03.png);
}
.hero-6 {
  background-image: url(/assets/img/icon/ui_frame_h_04.png);
}
.sidekick-icon img {
  display: block;
  height: 125px;
  margin: auto;
  -webkit-mask-image: url(/assets/img/icon/ui_frame_s_base_mask.png);
  mask-image: url(/assets/img/icon/ui_frame_s_base_mask.png);
}
.sidekick-3 {
  background-image: url(/assets/img/icon/ui_frame_s_base_01.png);
}
.sidekick-4 {
  background-image: url(/assets/img/icon/ui_frame_s_base_02.png);
}
.item {
  text-decoration: dotted;
}
.item img {
  height: 0.8em;
}
// Event page
.event-infobox {
  border: 2px solid $colorDark;
}
.event-infobox th {
  background-color: $colorDark;
  color: #fff;
  text-align: center;
}

